--- a/Aplicaciones/Gestiones/templates/nuevoCampista.html
+++ b/Aplicaciones/Gestiones/templates/nuevoCampista.html
@@ -7,7 +7,7 @@
             <div class="card shadow">
                 <div class="card-body">
                     <h3 class="text-center mb-4">REGISTRO DE CAMPISTAS</h3>
-                    <form action="{% url 'guardarCampista' %}" id="frm_nuevo_campista" method="POST">
+                    <form action="/guardarCampista/" id="frm_nuevo_campista" method="POST">
                         {% csrf_token %}
 
                         <div class="mb-3">
