--- a/Aplicaciones/Gestiones/templates/nuevoReservas.html
+++ b/Aplicaciones/Gestiones/templates/nuevoReservas.html
@@ -7,7 +7,7 @@
             <div class="card shadow">
                 <div class="card-body">
                     <h3 class="text-center mb-4">REGISTRO DE RESERVAS</h3>
-                    <form action="{% url 'guardarReserva' %}" id="frm_nuevo_reserva" method="POST">
+                    <form action="/guardarReserva/" id="frm_nuevo_reserva" method="POST">
                         {% csrf_token %}
                         
                         <div class="mb-3">
@@ -85,7 +85,7 @@
                 },
                 txt_fechfin_rev: {
                     required: true,
-                    greaterThanFechaInicio: true
+                    fechaFinMayorOIgual: true
                 },
                 txt_tipoaloj_camp: {
                     required: true
@@ -112,7 +112,7 @@
                 },
                 "txt_fechfin_rev": {
                     required: "Por favor ingrese la fecha de finalización",
-                    greaterThanFechaInicio: "La fecha de finalización debe ser posterior a la fecha de inicio"
+                    fechaFinMayorOIgual: "La fecha de finalización debe ser posterior a la fecha de inicio"
                 },
                 "txt_tipoaloj_camp": {
                     required: "Por favor seleccione el tipo de alojamiento"
