--- a/Aplicaciones/Gestiones/templates/plantilla.html
+++ b/Aplicaciones/Gestiones/templates/plantilla.html
@@ -1,14 +1,23 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GESTIONES</title>
-    <link rel="stylesheet" href="{% static 'li/bootstrap-5.3.3-dist/css/bootstrap.min.css'%}">
-    <link rel="stylesheet" href="{% static 'li/iziToast-master/dist/css/iziToast.min.css'%}">
-    <script src="{% static 'li/jquery/dist/jquery.min.js' %}"></script>
-    <script src="{% static 'li/jquery-validation/dist/jquery.validate.min.js' %}"></script>
+    <!--Importando jquery-->
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <!--Importando bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js" integrity="sha512-Zq9o+E00xhhR/7vJ49mxFNJ0KQw1E1TMWkPTxrWcnpfEFDEXgUiwJHIKit93EW/XxE31HSI5GEOW06G6BF1AtA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.css" integrity="sha512-DIW4FkYTOxjCqRt7oS9BFO+nVOwDL4bzukDyDtMO7crjUZhwpyrWBFroq+IqRe6VnJkTpRAS6nhDvf0w+wHmxg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Importando jquery validate-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
+
    
 
 </head>
@@ -17,41 +26,33 @@
         <!-- Encabezado -->
     <div class="bg-success py-3">
         <div class="d-flex justify-content-between align-items-center container">
-            <!-- Logo -->
-            <a href="/" class="navbar-brand"> 
-                <img src="{% static 'img/logo.jpg' %}" alt="Logo" width="100" height="100">
-            </a>
-    
+            
             <!-- Menú de navegación -->
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="{% url 'inicio' %}">INICIO</a>
+                    <a class="nav-link text-light" href="/inicio/">INICIO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="{% url 'listadoCampista' %}">LISTADO CAMPISTAS</a>
+                    <a class="nav-link text-light" href="/listadoCampista/">LISTADO CAMPISTAS</a>
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="{% url 'nuevoCampista' %}">AGREGAR CAMPISTAS</a>
+                    <a class="nav-link text-light" href="/nuevoCampista/">AGREGAR CAMPISTAS</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="{% url 'listadoReservas' %}">LISTADO RESERVAS</a>
+                    <a class="nav-link text-light" href="/listadoReservas/">LISTADO RESERVAS</a>
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="{% url 'nuevoReservas' %}">AGREGAR RESERVAS</a>
+                    <a class="nav-link text-light" href="/nuevoReservas/">AGREGAR RESERVAS</a>
                 </li>
                     
                     
             </ul>
         </div>
     </div>
-    <!-- JS de Bootstrap -->
-    <script src="{% static 'li/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
-
-    <!-- JS de iziToast -->
-    <script src="{% static 'li/iziToast-master/dist/js/iziToast.min.js' %}"></script>
+   
     
     <!-- Contenido dinámico -->
     <main class="container my-4">
@@ -107,14 +108,16 @@
         }, "La fecha de inicio no puede ser anterior al día de hoy");
     </script>
     <script>
-
-        // Validación personalizada para verificar que la fecha de finalización sea posterior a la fecha de inicio
-        jQuery.validator.addMethod("greaterThanFechaInicio", function(value, element) {
-            var fechaInicio = new Date($("#txt_fechin_rev").val());
+        jQuery.validator.addMethod("fechaFinMayorOIgual", function(value, element) {
             var fechaFin = new Date(value);
-            return this.optional(element) || fechaFin > fechaInicio;
-        }, "La fecha de finalización debe ser posterior a la fecha de inicio");
+            var fechaActual = new Date();
+            fechaActual.setHours(0, 0, 0, 0); // Establecer la hora a medianoche
+            return this.optional(element) || fechaFin >= fechaActual;
+        }, "La fecha de finalización no puede ser anterior al día de hoy");
     </script>
-</body>
+    
+    
+    
+    </body>
 
 </html>
